# nialls-own-delay

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake_ctest.yaml
.husky/: pre-commit
Source/: Delay.cpp  Delay.h  FDNConstants.h  FeedbackDelayNetwork.cpp  FeedbackDelayNetwork.h  Modulation.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  STFT.cpp  STFT.h  StereoProcessor.h
Source/Constants/: Constants.h  DelayConstants.h  FDNContants.h  ModulationConstants.h  ParamIDs.h  STFTConstants.h  SharedConstants.h
Source/Params/: ParamIDs.h  ParamsData.cpp  ParamsData.h
jsui/: package-lock.json  package.json  webpack.config.js
jsui/src/: .eslintrc.yml  App.js  ParamLabel.js
tests/: CMakeLists.txt
tests/unittests/: AudioProcessor_gTest.cpp
